<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tutorial2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroudNoColor2"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/topTutorial2"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:onClick="backClickT2"
                android:src="@drawable/ic_clear_black_24dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/backgroudTutorial">


            <TextView
                android:layout_width="@dimen/txtTutorialW"
                android:layout_height="@dimen/txtTutorialH"
                android:layout_alignBottom="@id/imgviewTutorial1"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/imgViewTutorialH"
                android:gravity="center"
                android:textSize="20dp"
                android:text="@string/tutorial2" />

            <ImageView
                android:id="@+id/imgviewTutorial1"
                android:layout_width="@dimen/imgViewTutorialW"
                android:layout_height="@dimen/imgViewTutorialH"

                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginBottom="238dp"
                android:src="@drawable/bob_feliz" />

            <RelativeLayout
                android:id="@+id/Linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:background="@color/backgroudTutorialRela"

                >
                <Button
                    android:layout_width="250dp"
                    android:layout_height="55dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/botao_proximo"
                    android:textSize="31dp"
                    android:textStyle="italic"
                    android:textAlignment="center"
                    android:textDirection="firstStrong"

                    style="@style/Widget.AppCompat.ActionButton.Overflow"
                    android:onClick="proxClick2"
                    />

            </RelativeLayout>


        </RelativeLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>